--- a/Urlister/Urlister/Urlister.csproj
+++ b/Urlister/Urlister/Urlister.csproj
@@ -9,7 +9,7 @@
     <AssemblyName>Urlister</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <ApplicationIcon>Resources\pencil_308509_640_tQJ_icon.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\publicdomain.com_7-8-vista-xp.ico</ApplicationIcon>
     <NoWin32Manifest>False</NoWin32Manifest>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
@@ -63,6 +63,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="Resources\pencil_308509_640_tQJ_icon.ico" />
+    <None Include="Resources\publicdomain.com_7-8-vista-xp.ico" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AboutForm.resx">
